# net-player-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  backtrace.js  bluetooth-mem-gotchas.txt  eqTest.cpp  esp-host.sh  esp-ip.sh  esp-link-flash-app.sh  esp-link-flash-full.sh  esplink-flash.sh  i2s-dma-psram-4.4.8.patch  idf-4.4.2.patch  iram-4.4.8.patch  log.sh  madTest.cpp  ota.sh  partitions.csv  partoffset.py  sdkconfig  staexport.sh  staimport.sh  wup.sh
components/: httpLib  json  mySystem  st7735
components/cspot/: CMakeLists.txt  component.mk
components/cspot/bell-utils/: BellLogger.cpp  BellUtils.cpp  Crypto.cpp  NanoPBExtensions.cpp  NanoPBHelper.cpp  aes.c
components/cspot/bell-utils/include/: BellLogger.h  BellTask.h  BellUtils.h  Crypto.h  NanoPBExtensions.h  NanoPBHelper.h  Queue.h  TimeDefs.h  aes.h
components/cspot/src/: AccessKeyFetcher.cpp  AccessKeyFetcher.h  ApResolve.cpp  AuthChallenges.cpp  AuthChallenges.h  CSpotContext.h  Logger.h  LoginBlob.cpp  LoginBlob.h  MercurySession.cpp  MercurySession.h  PlaybackState.cpp  PlaybackState.h  Session.cpp  Session.h  SpircHandler.cpp  SpircHandler.h  TrackQueue.cpp  TrackQueue.h  TrackReference.cpp  TrackReference.h
components/libhelix-aac/: CMakeLists.txt  aaccommon.h  aacdec.h  aactabs.c  assembly.h  buffers.c  component.mk  dct4.c  dequant.c  fft.c  huffman.c  pns.c  sbr.c  sbrfreq.c  sbrhfadj.c  sbrhfgen.c  sbrhuff.c  sbrmath.c  sbrqmf.c  sbrtabs.c  stproc.c  tns.c  trigtabs.c
components/libmad/: CMakeLists.txt  component.mk  config.h
dlna/: avtrans.xml  connmgr.xml  deviceDesc.xml  rendctl.xml
main/: CMakeLists.txt  a2dpInputNode.cpp  a2dpInputNode.hpp  audioNode.cpp  audioNode.hpp  audioPlayer.cpp  audioPlayer.hpp  autoString.hpp  biquad.hpp  bluetooth.cpp  bluetooth.hpp  btRemote.cpp  btRemote.hpp  buffer.hpp  cexport.c  component.mk  decoderAac.cpp  decoderAac.hpp  decoderFlac.cpp  decoderFlac.hpp  decoderMp3.cpp  decoderMp3.hpp  decoderNode.cpp  decoderNode.hpp  decoderVorbis.cpp  decoderVorbis.hpp  decoderWav.cpp  decoderWav.hpp  detectorOgg.hpp  dlna-parse.cpp  dlna-parse.hpp  dlna.cpp  dlna.hpp  eqCores.cpp  eqCores.hpp  equalizer.cpp  equalizer.hpp  equalizerNode.cpp  equalizerNode.hpp  eventGroup.hpp  (+58 more)
recovery/: CMakeLists.txt  sdkconfig  (+2 more)
(+60 files in other folders)
